--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "bower",
   "description": "Сборка для работа фронта",
   "main": "gulpfile.js",
-  "directory" : "bower",
+  "directory": "bower",
   "authors": [
     "lupus1995 <canya.panfilov.95@mail.ru>"
   ],
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "font-awesome-sass": "4.7.0",
-    "bootstrap": "v4.0.0-alpha.6"
+    "bootstrap": "v4.0.0-alpha.6",
+    "jquery.maskedinput": "^1.4.1"
   }
 }
